<resources>
    <string name="app_name">Nanotypos</string>
    <string name="Logo">Logo</string>
    <string name="motto">ADVANCED NANOMANUFACTURING</string>
    <string name="Press">Press</string>
    <string name="Camera">Camera</string>
    <string name="Image">Image</string>
    <string name="Usage">Tap on Image to import an image from gallery or tap Camera to capture an image.</string>
    <string name="Search">Search for</string>
    <string name="QR">QR Code</string>
    <string name="ForLogo">Nanotypos Logo</string>
    <string name="ForPreview">Tap for live preview</string>
    <string name="Preview">Live Camera Preview</string>
    <string name="QR_success">The QR code you scanned leads you to:</string>
    <string name="QR_failure">The QR code you scanned does not lead somewhere.</string>
    <string name="NoLogo">Nanotypos Logo not found.</string>
</resources>